added flag for jdk17+