@@ -1,5 +1,6 @@
 #!/bin/bash
-
+# jdk17+: add --illegal-access=permit
+JAVA_OPTS="-Xms512m -Xmx4g $JAVA_OPTS"
 echo "JAVA_OPTS: $JAVA_OPTS"
 
 DIR="target"
